<resources>
    <string name="app_name">EnglishTime</string>
    <string name="form_english_sentence_fro_this_arabic_question">Form English Sentence fro this Arabic Question</string>
    <string name="select_odd_one">Select Odd One</string>
    <string name="listen_and_select">Listen And Select</string>
    <string name="sound">sound</string>
    <string name="lesson2">Lesson2</string>
    <string name="lesson1">Lesson1</string>
    <string name="unit_1">UNIT 1</string>
    <string name="cross">Cross</string>
    <string name="listen">Listen</string>
    <string name="odd">Odd</string>
    <string name="form">Form</string>
    <string name="vocab">Vocab</string>
    <string name="_1">1</string>
    <string name="snameItem">AAA</string>
    <string name="snake">Snake</string>
    <string name="currentplay">currentPlay</string>
    <string name="play">Play</string>
    <string name="complete_missing_letters">Complete Missing Letters</string>
    <string name="check_puncate_of_text_below">Check Puncate of Text Below :: </string>
    <string name="pst_represent_past_events_performed_by_adding_d_ed_and_there_are_irregular_verbs">PST: represent past events, performed by adding d-ed and there are irregular verbs</string>
    <string name="select_words_that_belong_to_belongs_category">Select Words that belong to belongs category</string>
    <string name="play_c">PLay ^_^</string>
    <string name="scrore_message">Score:: </string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="good_job_n_keep_moving">Good Job\n Keep Moving</string>
    <string name="you_have_finished_this_challenge">You have finished this challenge</string>
    <string name="good">Very Good, You did a good work, Keep Moving </string>
    <string name="bad">You did a good work, you can try again to get a better results</string>
    <string name="final_name">This certificate said that %s has got %d out of %d in English App Practice</string>
    <string name="check">check</string>
    <string name="score_message">Score:: </string>
</resources>
